# release-docker-gitlab

./: .gitignore  README.md  dotenv.py  fileio.py  pyproject.toml  release.py  requirements.txt  semver.py  setup.py  test_fix.py
.github/workflows/: python-app.yml
example-project-root/: .env  .gitlab-ci.yml
src/: dotenv.py  semver.py
src/release_docker_gitlab/: __main__.py  dotenv.py  release.py  semver.py
tests/: test_dotenv.py  test_fileio.py  test_semver.py  test_yaml.py
tests/release_docker_gitlab/: test_dotenv.py  test_fileio.py  test_semver.py  test_yaml.py
